Fixed Navbar on safari & firefox, also finished csrf protection.

--- a/src/components/NavBar/assets/NavBar.scss
+++ b/src/components/NavBar/assets/NavBar.scss
@@ -76,7 +76,7 @@
 
       // border properties
       border-radius: 10%;
-      border: 0.01vw solid rgb(255, 255, 255);
+      box-shadow:0 0 0 .1vw #fff;
     }
   }
 
@@ -102,12 +102,6 @@
         align-items: center;
 
         cursor: pointer;
-
-        &:hover {
-          transform: scale(1.1);
-          border-radius: 8px;
-          transition: 0.5s;
-        }
 
         img {
           $width: 2.5vw;
@@ -204,6 +198,7 @@
     box-shadow: 0px 0px 20px 0.2px rgba(0, 0, 0, 0.305);
     background: rgb(160, 0, 0);
     transition: 0.5s ease;
+
     &:hover {
       background: rgb(150, 0, 0);
     }
@@ -211,6 +206,7 @@
     border-radius: 0.25vw;
     cursor: pointer;
     width: fit-content;
+    min-width: 11vw;
     margin-right: 1vw;
 
     height: 6vh;
@@ -227,8 +223,7 @@
     img {
       &[alt="profile"] {
         // make a border with a box shadow so the image is not cut off
-        box-shadow: 0 0 0vw 0.05vw white;
-        $width: fit-content;
+        $width: 4vh;
         $height: 4vh;
         min-width: $width;
         width: $width;
@@ -253,8 +248,7 @@
         max-height: $height;
 
         // colors the image white
-        filter: invert(98%) sepia(100%) saturate(9%) hue-rotate(154deg)
-          brightness(103%) contrast(103%);
+        filter: invert(98%) sepia(100%) saturate(9%) hue-rotate(154deg) brightness(103%) contrast(103%);
       }
     }
 
